--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "lint": "eslint"
   },
   "dependencies": {
-    "@tanstack/react-query": "^5.90.2",
+    "@tanstack/react-query": "^5.90.3",
     "axios": "^1.12.2",
     "classnames": "^2.5.1",
+    "cookie": "^1.0.2",
     "formik": "^2.4.6",
+    "js-cookie": "^3.0.5",
     "next": "^15.5.4",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
